pkp/pkp-lib#2894 Add /users/reviewers API endpoint
